# arka-test-task

./: Makefile  pyproject.toml  schema.py
migrations/: 0000001.init.sql
src/backend/: main.py  schema.py  service.py
src/tests/: test_service.py
